--- a/shadow/templates/auth/login.html
+++ b/shadow/templates/auth/login.html
@@ -11,7 +11,7 @@
         <div class="column">
             <h2 class="ui orange image header">
                 <img src="{{ url_for('static', filename='logo.png') }}" class="image">
-                <span class="content">Sign into CatChat</span>
+                <span class="content">Sign into Shadow</span>
             </h2>
             <form class="login ui large form" method="post" action="{{ url_for('auth.login') }}">
                 <div class="ui stacked segment">
