--- a/shadow/templates/auth/register.html
+++ b/shadow/templates/auth/register.html
@@ -10,7 +10,7 @@
                 <div class="header ui image ">
                     <img src="{{ url_for('static', filename='logo.png') }}" class="image">
                     <div class="content">
-                        Welcome to <span class="shadow-text">CatChat</span>!
+                        Welcome to <span class="shadow-text">Shadow</span>!
                     </div>
                 </div>
             </div>
