--- a/shadow/static/css/index.css
+++ b/shadow/static/css/index.css
@@ -1,242 +1,112 @@
-.jetbrains-cookies-banner {
-    position: fixed;
-    bottom: 0;
-    z-index: 999999;
-    width: 452px;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-}
-
-.jetbrains-cookies-banner--position-center {
-    right: 0;
-    left: 0;
-    margin: 0 auto
-}
-
-.jetbrains-cookies-banner--position-left {
-    left: 0
-}
-
-.jetbrains-cookies-banner--position-right {
-    right: 0
-}
-
-.jetbrains-cookies-banner--position-in-place {
-    position: relative;
-    bottom: auto;
-    z-index: 0
-}
-
-@media (max-width: 500px) {
-    .jetbrains-cookies-banner {
-        width: 100vw;
-        right: 0 !important;
-        left: 0 !important
-    }
-}
-
-.jetbrains-cookies-banner__body {
-    position: relative;
-    overflow-y: auto;
-    overflow-x: hidden;
-    max-height: 340px;
-    padding: 0 23px;
-    background: #000;
-    color: #ccc;
-    font: 12px/16px Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-}
-
-.jetbrains-cookies-banner__body:before {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    content: "";
-    display: block;
-    height: 19px;
-    box-shadow: inset 0 5px 10px #000
-}
-
-.jetbrains-cookies-banner__paragraph {
-    margin: 0 0 16px
-}
-
-.jetbrains-cookies-banner__pre {
-    position: relative
-}
-
-.jetbrains-cookies-banner__pre:after, .jetbrains-cookies-banner__pre:before {
-    content: "";
-    display: block;
-    height: 16px;
-    background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNC40IDE2Ij48ZyBmaWxsPSIjQ0NDIj48cGF0aCBkPSJNLjUgNi4zaDYuMnYxSC41di0xem0wIDIuOGg2LjJ2MUguNXYtMXpNNy44IDcuOEgxNHYxSDcuOHYtMXoiLz48L2c+PC9zdmc+") 0 50%
-}
-
-.jetbrains-cookies-banner__pre-inner {
-    position: relative;
-    display: block;
-    padding: 15px 14px 13px
-}
-
-.jetbrains-cookies-banner__pre-inner:after, .jetbrains-cookies-banner__pre-inner:before {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    content: "";
-    display: block;
-    width: 14px;
-    background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNC40IDE2Ij48cGF0aCBmaWxsPSIjQ0NDIiBkPSJNNC4zIDIuOHYxMmgtMXYtMTJoMXoiLz48L3N2Zz4=") 50% 0
-}
-
-.jetbrains-cookies-banner__pre-inner:before {
-    left: 0
-}
-
-.jetbrains-cookies-banner__pre-inner:after {
-    right: -7px
-}
-
-.jetbrains-cookies-banner__close-button {
-    position: absolute;
-    top: 5px;
-    left: 3px;
-    z-index: 1;
-    width: 20px;
-    height: 20px;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
-    color: #cccbcb;
-    font: 12px/16px Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-    border: 0;
-    transition: all .3s
-}
-
-.jetbrains-cookies-banner__close-button:hover {
-    color: #fff
-}
-
-.jetbrains-cookies-banner .jetbrains-cookies-banner__link {
-    cursor: pointer;
-    color: inherit;
-    text-decoration: underline
-}
-
-.jetbrains-cookies-banner .jetbrains-cookies-banner__link:hover {
-    color: #fff
-}
-
-.jetbrains-cookies-banner__buttons {
-    display: inline-block
-}
-
-.jetbrains-cookies-banner__choice-link {
-    margin-right: 30px;
-    cursor: pointer;
-    color: inherit;
-    text-decoration: none
-}
-
-.jetbrains-cookies-banner__choice-link b {
-    font-weight: inherit
-}
-
-.jetbrains-cookies-banner__buttons._reverse .jetbrains-cookies-banner__choice-link {
-    float: right
-}
-
-.jetbrains-cookies-banner__choice-link:hover {
-    color: #fff;
-    text-decoration: none
-}
-
-.jetbrains-cookies-banner__choice-link:hover b {
-    text-decoration: underline
-}
-
-.jquery-console-focus span.jquery-console-cursor {
-    background: #eee;
-    color: #eee;
-    font-weight: 700
-}
-
-.win .jquery-console-focus span.jquery-console-cursor {
-    background: transparent;
-    border-bottom: 2px solid;
-    -webkit-animation: blink 1s steps(2, start) infinite;
-    animation: blink 1s steps(2, start) infinite
-}
-
-.jquery-console-inner {
-    padding-bottom: 16px
-}
-
-.jquery-console-message {
-    margin: 16px 0
-}
-
-@-webkit-keyframes blink {
-    to {
-        visibility: hidden
-    }
-}
-
-@keyframes blink {
-    to {
-        visibility: hidden
-    }
-}
-
-
-.terminal {
+html,
+body {
+    width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 10px 20px 10px 20px;
-
 }
 
-.terminal-text {
-    background: #000;
-    padding: 20px 20px 0 20px;
+body {
+    background: #fff;
+}
+
+#container {
+    height: 100%
+}
+
+#terminal-container {
+    position: absolute;
+    left: 0;
+    top: 40px;
+    bottom: 0;
+    right: 0;
+    padding: 5px;
+}
+
+#terminal-container .terminal {
+    background-color: #000;
+    color: #fafafa;
+}
+
+.header a {
     color: #fff;
-    border-radius: 2px;
-    overflow: scroll;
-    height: 50%;
-    font: 12px/16px Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-    margin-bottom: 0;
+}
+
+.header .tit {
+    text-align: center;
+    text-indent: -10%;
+}
+
+::-webkit-scrollbar {
+    width: 14px;
+    height: 14px;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    height: 6px;
+    border-radius: 7px;
+    border: 4px solid transparent;
+    background-color: #ddd;
+    background-clip: padding-box;
+}
+
+.header {
+    height: 40px;
+    background-color: #003580;
+    position: relative;
+}
+
+#terminal-container {
+    position: absolute;
+    left: 0;
+    top: 40px;
+    bottom: 0;
+    right: 0;
+    padding: 5px;
+}
+
+.header .nav {
+    position: relative;
+    float: left;
+    width: 200px;
+    height: 40px;
+    line-height: 40px;
+    background-color: #0071ce;
+    text-align: center;
+    font-size: 12px;
+    z-index: 1;
 }
 
 .input-shell {
-    padding: 0 20px 20px 20px;
-    background: #000;
-    color: #eee;
-    border: none;
-    outline: none;
-    z-index: 100000;
-    font: 12px/16px Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+    margin-bottom: 20px;
 }
 
 .input-shell span.console-cursor {
     background: #eee;
-    color: #eee;
+    color: #ccc;
     font-weight: 700;
     animation: blink 1s steps(2, start) infinite;
 }
 
+.terminal-text {
+    position: relative;
+    padding: 0 23px;
+    background: #000;
+    color: #ccc;
+
+}
+
 #console-input {
     background: #000;
-    color: #eee;
+    color: #ccc;
     outline: none;
     border: none;
     width: 80%;
-    font-weight: 700;
-    font: 12px/16px Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+
 }
 
-.terminal-main {
-    height: 100%;
-    overflow-y: scroll;
-    padding: 10px 20px 10px 20px;
-    margin: 100px 0 0 0;
+pre, #console-input, .terminal-text {
+    font: 16px/20px Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
 }
