--- a/shadow/static/css/style.css
+++ b/shadow/static/css/style.css
@@ -37,18 +37,18 @@ blockquote p {
     word-wrap: normal;
 }
 
-.shadow {
+.Shadow {
     margin-left: 20px;
 }
 
-.shadow span {
+.Shadow span {
     padding-left: 10px;
     font-weight: bold;
     font-size: 18px;
     color: #f26202;
 }
 
-.shadow-text {
+.Shadow-text {
     font-weight: bold;
     font-size: 18px;
     color: #f26202;
