--- a/shadow/templates/index.html
+++ b/shadow/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}CatChat{% endblock %}
+{% block title %}Shadow{% endblock %}
 
 {% block content %}
 <div class="pusher">
